--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_loginFragment_to_signUpFragment"
             app:destination="@id/signUpFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_landmarkActivity"
+            app:destination="@id/landmarkActivity" />
     </fragment>
     <fragment
         android:id="@+id/signUpFragment"
@@ -23,8 +26,9 @@
             android:id="@+id/action_signUpFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
         <action
-            android:id="@+id/action_loginFragment_to_landmarkActivity"
+            android:id="@+id/action_signUpFragment_to_landmarkActivity"
             app:destination="@id/landmarkActivity" />
+
     </fragment>
 
     <fragment
