landmark mostly working. still no navhost

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -35,11 +35,20 @@
         android:id="@+id/landmarksListFragment"
         android:name="com.example.a5236.LandmarksListFragment"
         android:label="fragment_landmarks_list"
-        tools:layout="@layout/fragment_landmarks_list" />
+        tools:layout="@layout/fragment_landmarks_list" >
+        <action
+            android:id="@+id/action_landmarksListFragment_to_landmarkFragment"
+            app:destination="@id/landmarkFragment" />
+    </fragment>
     <activity
         android:id="@+id/landmarkActivity"
         android:name="com.example.a5236.LandmarkActivity"
         android:label="activity_landmark"
         tools:layout="@layout/activity_landmark" />
+    <fragment
+        android:id="@+id/landmarkFragment"
+        android:name="com.example.a5236.LandmarkFragment"
+        android:label="fragment_landmark"
+        tools:layout="@layout/fragment_landmark" />
 
 </navigation>
