--- a/app/src/main/res/layout/activity_landmark.xml
+++ b/app/src/main/res/layout/activity_landmark.xml
@@ -2,13 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/newLmFab"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LandmarkActivity">
+
     <fragment
-        android:name="com.example.a5236.LandmarksListFragment"
         android:id="@+id/landmarksListFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:name="com.example.a5236.LandmarksListFragment"
+        android:layout_width="410dp"
+        android:layout_height="584dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="148dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
