--- a/app/src/main/res/layout/fragment_landmarks_list.xml
+++ b/app/src/main/res/layout/fragment_landmarks_list.xml
@@ -1,15 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/newLandmark"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LandmarksListFragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".LandmarksListFragment">
+
+    <Button
+        android:id="@+id/profile"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/profile" />
 
     <ExpandableListView
         android:id="@+id/landmarksExpList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="641dp">
+
+    </ExpandableListView>
 
 </LinearLayout>
