--- a/app/src/main/res/layout/activity_landmark.xml
+++ b/app/src/main/res/layout/activity_landmark.xml
@@ -7,12 +7,26 @@
     android:layout_height="match_parent"
     tools:context=".LandmarkActivity">
 
-    <fragment
-        android:id="@+id/landmarksListFragment"
-        android:name="com.example.a5236.LandmarksListFragment"
-        android:layout_width="410dp"
-        android:layout_height="584dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="148dp" />
+ <fragment
+     android:id="@+id/fragment"
+     android:name="androidx.navigation.fragment.NavHostFragment"
+     android:layout_width="match_parent"
+     android:layout_height="match_parent"
+     app:defaultNavHost="false"
+     app:navGraph="@navigation/nav_graph"
+     tools:layout_editor_absoluteX="0dp"
+     tools:layout_editor_absoluteY="173dp"
+     tools:visibility="invisible" />
+
+ <fragment
+     android:id="@+id/landmarksListFragment"
+     android:name="com.example.a5236.LandmarksListFragment"
+     android:layout_width="410dp"
+     android:layout_height="584dp"
+     app:layout_constraintBottom_toBottomOf="parent"
+     app:layout_constraintEnd_toEndOf="parent"
+     app:layout_constraintHorizontal_bias="0.0"
+     app:layout_constraintStart_toStartOf="parent"
+     app:layout_constraintTop_toBottomOf="@+id/fragment" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
