--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -15,7 +15,7 @@
             app:destination="@id/signUpFragment" />
         <action
             android:id="@+id/action_loginFragment_to_landmarkActivity"
-            app:destination="@id/landmarkActivity" />
+            app:destination="@id/landmarksListFragment" />
     </fragment>
     <fragment
         android:id="@+id/signUpFragment"
@@ -27,7 +27,7 @@
             app:destination="@id/loginFragment" />
         <action
             android:id="@+id/action_signUpFragment_to_landmarkActivity"
-            app:destination="@id/landmarkActivity" />
+            app:destination="@id/landmarksListFragment" />
 
     </fragment>
 
