added camera and addLandmark page, made loggedInUser accessible to any fragment

--- a/app/src/main/res/layout/fragment_landmarks_list.xml
+++ b/app/src/main/res/layout/fragment_landmarks_list.xml
@@ -13,11 +13,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/profile" />
+    <Button
+        android:id="@+id/camera"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/camera" />
+
 
     <ExpandableListView
         android:id="@+id/landmarksExpList"
         android:layout_width="match_parent"
-        android:layout_height="641dp">
+        android:layout_height="500dp">
 
     </ExpandableListView>
 
