--- a/app/src/main/res/layout/fragment_add_landmark.xml
+++ b/app/src/main/res/layout/fragment_add_landmark.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,13 +11,24 @@
         android:id="@+id/backButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/profile" />
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="13dp"
+        android:text="@string/profile"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_marginTop="50dp"
-        android:layout_height="250dp" />
+        android:layout_height="250dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/backButton" />
 
     <ProgressBar
         android:id="@+id/loading"
@@ -28,60 +41,7 @@
         android:layout_marginBottom="64dp"
         android:visibility="gone" />
 
-    <EditText
-        android:id="@+id/title"
-        android:layout_width="346dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="320dp"
-        android:layout_marginEnd="24dp"
-        android:hint="@string/prompt_title"
-        android:inputType="textShortMessage"
-        android:selectAllOnFocus="true" />
-
-    <EditText
-        android:id="@+id/description"
-        android:layout_width="346dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="375dp"
-        android:layout_marginEnd="24dp"
-        android:hint="@string/prompt_description"
-        android:inputType="textLongMessage" />
-
-    <EditText
-        android:id="@+id/hint"
-        android:layout_width="255dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="430dp"
-        android:layout_marginEnd="24dp"
-        android:hint="@string/prompt_hint"
-        android:inputType="textShortMessage" />
-
-    <EditText
-        android:id="@+id/difficulty"
-        android:layout_width="85dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="284dp"
-        android:layout_marginTop="430dp"
-        android:layout_marginEnd="24dp"
-        android:hint="@string/prompt_difficulty"
-        android:inputType="number" />
-
-    <Button
-        android:id="@+id/createLandmark"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="490dp"
-        android:layout_marginEnd="48dp"
-        android:layout_marginBottom="64dp"
-        android:enabled="false"
-        android:text="@string/action_create_landmark" />
-
-<!--    <TextView-->
+    <!--    <TextView-->
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="wrap_content"-->
 <!--        android:id="@+id/divider"-->
@@ -89,16 +49,78 @@
 <!--        android:layout_marginTop="635dp"-->
 <!--        android:layout_marginStart="135dp"/>-->
 
+    <EditText
+        android:id="@+id/title"
+        android:layout_width="346dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/prompt_title"
+        android:inputType="textShortMessage"
+        android:selectAllOnFocus="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/imageView"
+        app:layout_constraintVertical_bias="0.425" />
+
+    <EditText
+        android:id="@+id/description"
+        android:layout_width="346dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:hint="@string/prompt_description"
+        android:inputType="textLongMessage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title" />
+
+    <EditText
+        android:id="@+id/hint"
+        android:layout_width="255dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="22dp"
+        android:hint="@string/prompt_hint"
+        android:inputType="textShortMessage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.16"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/description" />
+
+    <EditText
+        android:id="@+id/difficulty"
+        android:layout_width="85dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="32dp"
+        android:hint="@string/prompt_difficulty"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/description" />
+
+    <Button
+        android:id="@+id/createLandmark"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="32dp"
+        android:enabled="false"
+        android:text="@string/action_create_landmark"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/hint" />
+
     <Button
         android:id="@+id/retry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-        android:layout_marginStart="200dp"
-        android:layout_marginTop="490dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="28dp"
         android:enabled="true"
-        android:text="@string/action_retry" />
+        android:text="@string/action_retry"
+        app:layout_constraintStart_toEndOf="@+id/createLandmark"
+        app:layout_constraintTop_toBottomOf="@+id/difficulty" />
 
 
-
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
