--- a/app/src/main/res/layout/fragment_add_landmark.xml
+++ b/app/src/main/res/layout/fragment_add_landmark.xml
@@ -7,24 +7,39 @@
     android:layout_height="match_parent"
     tools:context=".AddLandmarkFragment">
 
+
     <Button
         android:id="@+id/backButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_width="177dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="13dp"
         android:text="@string/profile"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.068"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/rotatePicture"
+        android:layout_width="178dp"
+        android:layout_height="46dp"
+        android:layout_gravity="start"
+        android:layout_marginStart="197dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="16dp"
+        android:enabled="true"
+        android:text="@string/action_rotate_image"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/backButton"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:layout_marginTop="4dp"
+        android:layout_height="220dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,51 +66,67 @@
 
     <EditText
         android:id="@+id/title"
-        android:layout_width="346dp"
-        android:layout_height="wrap_content"
+        android:layout_width="360dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="10dp"
         android:hint="@string/prompt_title"
+        android:importantForAutofill="no"
         android:inputType="textShortMessage"
         android:selectAllOnFocus="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintHorizontal_bias="0.375"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/imageView"
-        app:layout_constraintVertical_bias="0.425" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.024" />
 
     <EditText
         android:id="@+id/description"
-        android:layout_width="346dp"
-        android:layout_height="wrap_content"
+        android:layout_width="360dp"
+        android:layout_height="42dp"
         android:layout_marginTop="20dp"
         android:hint="@string/prompt_description"
+        android:importantForAutofill="no"
         android:inputType="textLongMessage"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title" />
 
     <EditText
         android:id="@+id/hint"
-        android:layout_width="255dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
+        android:layout_width="179dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="24dp"
         android:hint="@string/prompt_hint"
+        android:importantForAutofill="no"
         android:inputType="textShortMessage"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.16"
+        app:layout_constraintHorizontal_bias="0.155"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/description" />
+
+    <TextView
+        android:layout_width="168dp"
+        android:layout_height="22dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="12dp"
+        android:text="@string/prompt_difficulty"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description" />
 
     <EditText
         android:id="@+id/difficulty"
-        android:layout_width="85dp"
-        android:layout_height="wrap_content"
+        android:layout_width="104dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="49dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="32dp"
-        android:hint="@string/prompt_difficulty"
+        android:layout_marginEnd="60dp"
+        android:autofillHints="1"
+        android:hint="@string/hint_difficulty"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/hint"
         app:layout_constraintTop_toBottomOf="@+id/description" />
 
     <Button
@@ -103,20 +134,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="12dp"
         android:enabled="false"
         android:text="@string/action_create_landmark"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/hint" />
+        app:layout_constraintTop_toBottomOf="@+id/difficulty" />
 
     <Button
         android:id="@+id/retry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="12dp"
         android:enabled="true"
         android:text="@string/action_retry"
         app:layout_constraintStart_toEndOf="@+id/createLandmark"
