--- a/app/src/main/res/layout/leaderboard_list_item.xml
+++ b/app/src/main/res/layout/leaderboard_list_item.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal" android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:weightSum="100"
     android:id="@+id/parent_layout">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="user1: 10"
-        android:textColor="#000"
-        android:layout_marginLeft="155dp"
-        android:textSize="17sp"
-        android:id="@+id/username_and_score"
-        />
+        <TextView
+            android:id="@+id/username_and_score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="-2dp"
+            android:text="user1"
+            android:textColor="#000"
+            android:textSize="17sp" />
 
-</RelativeLayout>
+</LinearLayout>
