added logout, added toggle for friends in leaderboard, added toast messages

--- a/app/src/main/res/menu/mymenu.xml
+++ b/app/src/main/res/menu/mymenu.xml
@@ -15,4 +15,9 @@
         android:id="@+id/option_delete_account"
         android:title="Delete Account"
         android:visible="true" />
+
+    <item
+        android:id="@+id/option_logout_account"
+        android:title="Logout"
+        android:visible="true" />
 </menu>
