--- a/app/src/main/res/layout/fragment_landmark.xml
+++ b/app/src/main/res/layout/fragment_landmark.xml
@@ -30,6 +30,13 @@
         android:textColor="@android:color/black"
         android:textSize="24sp" />
 
+    <TextView
+        android:id="@+id/landmark_difficulty"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textColor="#000000" />
+
     <View
         android:id="@+id/divider2"
         android:layout_width="match_parent"
@@ -96,5 +103,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/landmark_found" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"></LinearLayout>
 
 </LinearLayout>
