--- a/app/src/main/res/layout/fragment_landmark.xml
+++ b/app/src/main/res/layout/fragment_landmark.xml
@@ -48,7 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="TextView"
+        android:text="@string/landmark_description"
         android:textColor="#000000"
         android:textSize="18sp"
         tools:text="@string/landmark_description" />
@@ -63,7 +63,7 @@
         android:id="@+id/hintHeader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hint:"
+        android:text="@string/landmark_hint_header"
         android:textColor="#000000"
         android:textSize="24sp" />
 
