hardcoded strings moved to strings.xml

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -26,7 +26,7 @@
             android:layout_marginStart="177dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="177dp"
-            android:text="TextView"
+            android:text="@string/profile_username"
             android:textColor="#000"
             android:textSize="25sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -54,7 +54,7 @@
             android:layout_marginStart="176dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="176dp"
-            android:text="TextView"
+            android:text="@string/profile_score"
             android:textColor="#000"
             android:textSize="17sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -82,7 +82,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="10dp"
-            android:text="@string/leaderboard"
+            android:text="@string/profile_leaderboard"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/recycler_view"
             app:layout_constraintEnd_toStartOf="@+id/friend_filter"
@@ -97,7 +97,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:text="@string/friend_switch"
+            android:text="@string/profile_friend_switch"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
