--- a/app/src/main/res/layout/leaderboard_list_item.xml
+++ b/app/src/main/res/layout/leaderboard_list_item.xml
@@ -12,7 +12,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="50dp"
             android:layout_marginTop="-2dp"
-            android:text="user1"
+            android:text="@string/profile_username"
             android:textColor="#000"
             android:textSize="17sp" />
 
